--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_markdown: ^0.7.7
   google_generative_ai: ^0.4.6
   image_picker: ^1.1.2
+  material: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
