--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   material: ^1.0.0+2
   path_provider: ^2.1.5
   permission_handler: ^11.4.0
+  provider: ^6.1.3 
 
 dev_dependencies:
   flutter_test:
