--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_markdown: ^0.7.7
   google_generative_ai: ^0.4.6
   image_picker: ^1.1.2
+  intl: ^0.20.2
   material: ^1.0.0+2
   path_provider: ^2.1.5
   permission_handler: ^11.4.0
